--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,15 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap");
 
 body {
-  @apply px-4;
   @apply text-ig-dark-blue;
-  @apply py-8;
-  @screen md {
-    padding: 0;
-  }
   @apply font-raleway;
 
   a:hover {
