--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -13,13 +13,10 @@
 }
 
 .avatarImg {
-  //box-shadow: 0px 0px 15px 10px rgba(255, 153, 51, 0.2);
-  @apply border-4;
-  @apply border-orange;
-}
-
-.arrowSvg {
-  transform: rotate(87deg);
-  left: calc(50% - 9rem);
-  top: 8.4rem;
+  height: 10rem;
+  width: 10rem;
+  @screen md {
+    height: 13rem;
+    width: 13rem;
+  }
 }
